--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:vvZNx5Ft0UpZ0OUDSuGfWlGVDutgQwqXVYYMvQ4Z3j8=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
